--- a/sesiones/sesion4/Sesion4_3_Classification.ipynb
+++ b/sesiones/sesion4/Sesion4_3_Classification.ipynb
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "HQou0Fz0yjkc"
       },
@@ -128,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "-UV64zD5pGdU"
       },
@@ -140,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "0f-uPpbmFpO2"
       },
@@ -326,11 +326,11 @@
       "outputs": [],
       "source": [
         "# Entrenar clasificador KNN\n",
-        "knn = KNeighborsClassifier(None)\n",
-        "knn.fit(None,None)\n",
+        "knn = KNeighborsClassifier(n_neighbors=5)\n",
+        "knn.fit(X_train , y_train)\n",
         "\n",
         "# Predecir en el conjunto de pruebas\n",
-        "y_pred = knn.predict(None)"
+        "y_pred = knn.predict(X_test)"
       ]
     },
     {
@@ -607,9 +607,9 @@
       },
       "outputs": [],
       "source": [
-        "dt = None\n",
-        "model_dt = dt.fit(None.values, None)\n",
-        "y_pred = model_dt.predict(None.values)"
+        "dt = DecisionTreeClassifier()\n",
+        "model_dt = dt.fit(X_train.values, y_train)\n",
+        "y_pred = model_dt.predict(X_test.values)"
       ]
     },
     {
